--- a/notebooks/ch5_Individual_Conditional_Expectation.ipynb
+++ b/notebooks/ch5_Individual_Conditional_Expectation.ipynb
@@ -32,13 +32,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 51,
    "outputs": [],
    "source": [
     "def seed_everything(seed=42):\n",
     "    random.seed(seed)\n",
     "    np.random.seed(seed)\n",
     "    os.environ[\"PYTHONHASHSEED\"] = str(seed)\n",
+    "\n",
     "\n",
     "\n",
     "def regression_metrics(estimator, X, y):\n",
@@ -114,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 52,
    "outputs": [],
    "source": [
     "def generate_simulation_data():\n",
@@ -138,16 +139,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 53,
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/kengo-fujii/anaconda3/envs/py36/lib/python3.6/site-packages/ipykernel_launcher.py:7: UserWarning: Matplotlib is currently using module://ipykernel.pylab.backend_inline, which is a non-GUI backend, so cannot show the figure.\n",
-      "  import sys\n"
-     ]
-    },
     {
      "data": {
       "text/plain": "<Figure size 432x288 with 1 Axes>",
@@ -174,14 +167,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 54,
    "outputs": [
     {
      "data": {
       "text/plain": "       RMSE        R2\n0  0.311734  0.989384",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>RMSE</th>\n      <th>R2</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>0.311734</td>\n      <td>0.989384</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 11,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,15 +189,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 55,
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/kengo-fujii/anaconda3/envs/py36/lib/python3.6/site-packages/ipykernel_launcher.py:70: UserWarning: Matplotlib is currently using module://ipykernel.pylab.backend_inline, which is a non-GUI backend, so cannot show the figure.\n"
-     ]
-    },
     {
      "data": {
       "text/plain": "<Figure size 432x288 with 1 Axes>",
@@ -225,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 56,
    "outputs": [],
    "source": [
     "class IndividualConditionalExpectation(PartialDependence):\n",
@@ -289,14 +275,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 57,
    "outputs": [
     {
      "data": {
       "text/plain": "   instance  prediction        X0        X1   X2\n0         0   -3.739563 -0.238218  0.868872  0.0",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>instance</th>\n      <th>prediction</th>\n      <th>X0</th>\n      <th>X1</th>\n      <th>X2</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>0</td>\n      <td>-3.739563</td>\n      <td>-0.238218</td>\n      <td>0.868872</td>\n      <td>0.0</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 36,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -312,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 58,
    "outputs": [
     {
      "data": {
@@ -332,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 59,
    "outputs": [
     {
      "data": {
@@ -346,6 +332,27 @@
    "source": [
     "ice.individual_conditional_expectation(\"X1\", [1])\n",
     "ice.plot(ylim=(-6,6))"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "   instance  prediction        X0        X1   X2\n0         1   -2.454619  0.633199 -0.610755  1.0",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>instance</th>\n      <th>prediction</th>\n      <th>X0</th>\n      <th>X1</th>\n      <th>X2</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>1</td>\n      <td>-2.454619</td>\n      <td>0.633199</td>\n      <td>-0.610755</td>\n      <td>1.0</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ice.df_instance"
    ],
    "metadata": {
     "collapsed": false
